// Produced by Acceleo JavaScript Generator 1.1.2
package soo.protobuf;

enum ActivityRequest {
  Pause = 0;
  Execute = 1;
}
