// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "./ActivityRequest.proto";

package soo.protobuf;

message FunctionalChain {
extensions 4 to 104;

  optional ccsds_mal.protobuf.STRING name = 1;
  optional soo.protobuf.ActivityRequest activity = 2;
  optional ccsds_mal.protobuf.TIME creationDate = 3;
}
