// Produced by Acceleo JavaScript Generator 1.1.2
package soo.protobuf;

enum OperationCriticality {
  LOW = 0;
  MEDIUM = 1;
  HIGH = 2;
}
