// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/DURATION.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";


package soo.protobuf;

message Result {
extensions 8 to 108;

  optional ccsds_mal.protobuf.STRING confirmationStatus = 1;
  optional ccsds_mal.protobuf.DURATION duration = 2;
  optional ccsds_mal.protobuf.STRING executionStatus = 3;
  optional ccsds_mal.protobuf.STRING detailedStatus = 4;
  optional ccsds_mal.protobuf.STRING exceptionDetails = 5;
  optional ccsds_mal.protobuf.TIME startDatetime = 6;
  optional ccsds_mal.protobuf.TIME endDatetime = 7;
}
